tests/ui/match/postfix-match/pf-match-types.stderr
error[E0308]: `match` arms have incompatible types
  --> $DIR/pf-match-types.rs:10:20
   |
LL | /     Some(10).match {
LL | |
LL | |         Some(5) => false,
   | |                    ----- this is found to be of type `bool`
LL | |
LL | |         Some(2) => true,
   | |                    ---- this is found to be of type `bool`
LL | |
LL | |         None    => (),
   | |                    ^^ expected `bool`, found `()`
...  |
LL | |         _       => true
LL | |     }
   | |_____- `match` arms have incompatible types

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0308`.
